--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: flutter_payu_money
 description: Unofficial PayU Money Flutter Plugin supports Android & iOS.
-version: 0.0.1
-author:
-homepage:
+version: 1.0.0
+author: Abhijeet Tripathi
+homepage: https://blog.joshsoftware.com/
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
